# forgeSDLC

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  ruff.toml  smithery.yaml
.github/workflows/: ci.yml  release.yml
agents/: agent_0_decompose.py  agent_10_docs.py  agent_11_integration.py  agent_12_contracts.py  agent_13_platform.py  agent_1_requirements.py  agent_2_stack.py  agent_3_architecture.py  agent_4_tool_router.py  agent_5_coord_review.py  agent_5b_security.py  agent_6_test_coordinator.py  agent_7_cicd.py  agent_8_deploy.py  agent_9_monitoring.py  base_agent.py
architecture_intelligence/: anti_pattern_detector.py  architecture_scorer.py  nfr_satisfiability.py
context_files/: manager.py
context_management/: agent_context_specs.py  context_compressor.py  context_packet.py  context_window_manager.py  token_estimator.py
demos/: cross_tool_memory_demo.py
docs/: DEMO_SCRIPT.md  REGISTRY_SUBMISSION.md  RELEASE_NOTES.md
electron/: electron-builder.yml  first_launch.js  main.js  package.json  preload.js  server_manager.js  tray.js  updater.js
frontend/src/: App.tsx  (+1 more)
interpret/: gate.py  loop.py  record.py
legal/: cursor_api_review.md  eu_ai_act_checklist.md  gdpr_dpa_template.md  privacy_policy.md
mcp_server/: server.py  transport.py
memory/: memory_archiver.py  memory_context_builder.py  organisational_memory.py  pipeline_history_store.py  post_mortem_records.py  project_context_graph.py  schemas.py  user_preference_profile.py
model_router/: budget_optimizer.py  catalog.py  context.py  fim_router.py  long_context_router.py  router.py  selector.py
orchestrator/: constants.py  exceptions.py  graph.py  state.py
providers/: health_checks.py  manifest.py  resolver.py
scripts/: commercial_readiness_check.py  debug_gather.py  debug_groq.py  debug_groq2.py  debug_round2.py  fix_release_yml.py  init_db.py  mcp_test_client.py  phase10_test.py  phase11_fresh.py  phase11_rounds.py  phase11_test.py  phase8_test.py  phase9_test.py
subscription/: anthropic_tos_warning.py  byok_manager.py  key_validator.py  session_manager.py  tiers.py
token_tracker/: aggregator.py  budget_monitor.py  exporter.py  record.py  tracker.py
tool_router/: context.py  router.py
tools/: docs_fetcher.py  render_tool.py  security_tools.py
vscode_extension/: README.md  extension.ts  package.json  test_extension.test.ts
workspace/: bridge.py  context.py  diff_engine.py  mode_router.py
(+94 files in other folders)
