[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forgesdlc"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "mcp>=1.0",
    "pydantic>=2.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "httpx-sse",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "langgraph>=1.1.4",
    "langgraph-checkpoint-sqlite>=3.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4.0",
    "pre-commit>=3.7",
    "detect-secrets>=1.4",
]

[project.scripts]
forgesdlc = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "orchestrator", "interpret"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TID"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"
filterwarnings = ["error"]